minor changes, stopped interchange flicker on large screens

--- a/source/stylesheets/app.css
+++ b/source/stylesheets/app.css
@@ -8132,7 +8132,7 @@ h4 {
 }
 @media only screen and (min-width: 768px) {
   .logo {
-    margin-top: 6px;
+    margin-top: 10px;
   }
 }
 
